--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Japanese Logic Puzzles</title>
+	<title>Japanese Logic Puzzle Archive - im mender? :/</title>
 	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
@@ -36,6 +36,19 @@
 		<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
 		<li><a>The Pencil Puzzle 2022</a></li>
 	</ul>
+	<h1>Rules</h1>
+	<ol>
+		<li><a href="dbchoco/index.html">Double Choco</a></li>
+		<li><a href="dotiloop/index.html">Dotchi-Loop</a></li>
+		<li><a href="fillomino/index.html">Fillomino</a></li>
+		<li><a href="heyawake/index.html">Heyawake</a></li>
+		<li><a href="kakuro/index.html">Kakuro</a></li>
+		<li><a href="masyu/index.html">Masyu</a></li>
+		<li><a href="numlin/index.html">Numberlink</a></li>
+		<li><a href="pencils/index.html">Pencils</a></li>
+		<li><a href="slither/index.html">Slitherlink</a></li>
+		<li><a href="yajilin/index.html">Yajilin</a></li>
+	</ol>
 </body>
 
 </html>
