--- a/en/pencil-puzzles/pencils/index.html
+++ b/en/pencil-puzzles/pencils/index.html
@@ -4,26 +4,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pencils Rules - Japanese Logic Puzzle Archive</title>
-	<link href="../../../../style.css" rel="stylesheet" type="text/css" media="all">
+	<title>Pencils Rules - im mender? :/</title>
+	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 	<header>
 		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../../../../fr/pencil-puzzles/rules/pencils/index.html">Fran&ccedil;ais</a></div>
+			<div class="langnav">English &lrarr; <a href="../../../fr/pencil-puzzles/pencils/index.html">Fran&ccedil;ais</a></div>
 			<ol>
-				<li class="crumb"><a href="../../../index.html">Home</a></li>
-				<li class="crumb"><a href="../../index.html">Japanese Logic Puzzle Archive</a></li>
-				<li class="crumb"><a href="../index.html">Rules</a></li>
-				<li class="crumb">Pencils</li>
+				<li class="crumb"><a href="../../index.html">Home</a></li>
+				<li class="crumb"><a href="../index.html">Japanese Logic Puzzle Archive</a></li>
+				<li class="crumb">Pencils Rules</li>
 			</ol>
 		</nav>
 		<h1>Rules of Pencils</h1>
 	</header>
 	<ol type="1">
 		<li>
-			Here you have to mark out pencils, draw lines from the tip (<img height="16" alt="pencil lead" src="../../../../images/penciltip.svg">) of the pencils, and use the numbers in the pencils. The lines go through the cells from the tip of the pencils.
+			Here you have to mark out pencils, draw lines from the tip (<img height="16" alt="pencil lead" src="../../../images/penciltip.svg">) of the pencils, and use the numbers in the pencils. The lines go through the cells from the tip of the pencils.
 		</li>
 		<li>
 			A pencil is a straight group of one or more cells with the tip (the lead) at one end. The line from the tip goes through the center of cells horizontally, vertically, or turning.
@@ -43,12 +42,12 @@
 		A pencil consists of a shaft, a tip, and a line extending from the tip. The number in a pencil represents both the length of the shaft and the length of the line extending from the tip. Putting the same number multiple times in a pencil is allowed.
 	</p>
 	<figure>
-		<img alt="Example" width="201" height="201" src="../../../../images/pencils_example.svg">
+		<img alt="Example" width="201" height="201" src="../../../images/pencils_example.svg">
 		<figcaption>Sample</figcaption>
 	</figure>
 	<figure style="font-size:3em;">&rarr;</figure>
 	<figure>
-		<img alt="Answer" width="201" height="201" src="../../../../images/pencils_answer.svg">
+		<img alt="Answer" width="201" height="201" src="../../../images/pencils_answer.svg">
 		<figcaption>Solution</figcaption>
 	</figure>
 </body>
