--- a/fr/goddess-metempsychosis/index.html
+++ b/fr/goddess-metempsychosis/index.html
@@ -4,14 +4,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique</title>
+	<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique - im mender? :/</title>
 	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 	<header>
-		<p><a href="../../en/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
-		<h1>M&eacute;tempsychose de la d&eacute;esse</h1>
+		<nav class="crumbs">
+			<div class="langnav"><a href="../../en/goddess-metempsychosis/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+			<ol>
+				<li class="crumb"><a href="../index.html">Accueil</a></li>
+				<li class="crumb">M&eacute;tempsychose de la d&eacute;esse</li>
+			</ol>
+		</nav>
+		<h1>M&eacute;tempsychose de la d&eacute;esse (Titre provisoire)</h1>
 		<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique par Mender</p>
 	</header>
 	<h2>Versions disponibles</h2>
