--- a/fr/pencil-puzzles/index.html
+++ b/fr/pencil-puzzles/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Casse-t&ecirc;tes logiques japonais</title>
+	<title>Archvie de casse-t&ecirc;tes logiques japonais - im mender? :/</title>
 	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
@@ -14,7 +14,7 @@
 			<div class="langnav"><a href="../../en/pencil-puzzles/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
 			<ol>
 				<li class="crumb"><a href="../index.html">Accueil</a></li>
-				<li class="crumb">Casse-t&ecirc;tes logiques japonais</li>
+				<li class="crumb">Archive de casse-t&ecirc;tes logiques japonais</li>
 			</ol>
 		</nav>
 		<h1>Casse-t&ecirc;tes logiques japonais</h1>
