--- a/en/pencil-puzzles/penpa2021/index.html
+++ b/en/pencil-puzzles/penpa2021/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The Pencil Puzzle 2021 - Japanese Logic Puzzle Archive</title>
+	<title>The Pencil Puzzle 2021 - im mender? :/</title>
 	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
@@ -23,18 +23,18 @@
 	<div id="container">
 		<div id="toc">
 			<ul>
-				<li><a href="#pencils">Pencils</a> (<a href="../rules/pencils/index.html">Rules</a>)</li>
-				<li><a href="#numlin">Numberlink</a> (<a href="../rules/numlin/index.html">Rules</a>)</li>
-				<li><a href="#masyu">Masyu</a> (<a href="../rules/masyu/index.html">Rules</a>)</li>
-				<li><a href="#fillomino">Fillomino</a> (<a href="../rules/fillomino/index.html">Rules</a>)</li>
-				<li><a href="#yajilin">Yajilin</a> (<a href="../rules/yajilin/index.html">Rules</a>)</li>
-				<li><a href="#dbchoco">Double Choco</a> (<a href="../rules/dbchoco/index.html">Rules</a>)</li>
-				<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../rules/dotiloop/index.html">Rules</a>)</li>
-				<li><a href="#heyawake">Heyawake</a> (<a href="../rules/heyawake/index.html">Rules</a>)</li>
-				<li><a href="#slither">Slitherlink</a> (<a href="../rules/slither/index.html">Rules</a>)</li>
-				<li><a href="#kakuro">Kakuro</a> (<a href="../rules/kakuro/index.html">Rules</a>)</li>
-				<li><a href="#heyagiant">Heyawake The Giant</a> (<a href="../rules/heyawake/index.html">Rules</a>)</li>
-				<li><a href="#masyugiant">Masyu The Giant</a> (<a href="../rules/masyu/index.html">Rules</a>)</li>
+				<li><a href="#pencils">Pencils</a> (<a href="../pencils/index.html">Rules</a>)</li>
+				<li><a href="#numlin">Numberlink</a> (<a href="../numlin/index.html">Rules</a>)</li>
+				<li><a href="#masyu">Masyu</a> (<a href="../masyu/index.html">Rules</a>)</li>
+				<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino/index.html">Rules</a>)</li>
+				<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin/index.html">Rules</a>)</li>
+				<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco/index.html">Rules</a>)</li>
+				<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop/index.html">Rules</a>)</li>
+				<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake/index.html">Rules</a>)</li>
+				<li><a href="#slither">Slitherlink</a> (<a href="../slither/index.html">Rules</a>)</li>
+				<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro/index.html">Rules</a>)</li>
+				<li><a href="#heyagiant">Heyawake The Giant</a> (<a href="../heyawake/index.html">Rules</a>)</li>
+				<li><a href="#masyugiant">Masyu The Giant</a> (<a href="../masyu/index.html">Rules</a>)</li>
 				<li><a href="#answer">Answers</a></li>
 			</ul>
 		</div>
