--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -4,15 +4,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>M&eacute;tempsychose de la d&eacute;esse 0.0.8</title>
+	<title>M&eacute;tempsychose de la d&eacute;esse 0.0.8 - im mender? :/</title>
 	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 	<header>
-		<p><a href="../../../en/goddess-metempsychosis/0.0.8/index.html">English</a> Fran&ccedil;ais</p>
-		<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8 (Titre provisoire)</h1>
-		<p> un jeu de r&ocirc;le fantasy urbaine post-apocalyptique par Mender </p>
+		<nav class="crumbs">
+			<div class="langnav"><a href="../../../en/goddess-metempsychosis/0.0.8/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+			<ol>
+				<li class="crumb"><a href="../../index.html">Accueil</a></li>
+				<li class="crumb"><a href="../index.html">M&eacute;tempsychose de la d&eacute;esse</a></li>
+				<li class="crumb">0.0.8</li>
+			</ol>
+		</nav>
+		<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8</h1>
+		<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique par Mender</p>
 	</header>
 	<div id="container">
 		<div id="toc">
