--- a/fr/pencil-puzzles/pencils/index.html
+++ b/fr/pencil-puzzles/pencils/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>R&egrave;gles de Pencils - Archive de casse-t&ecirc;tes logiques japonais</title>
+	<title>R&egrave;gles de Pencils - im mender? :/</title>
 	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
