--- a/fr/pencil-puzzles/penpa2021/index.html
+++ b/fr/pencil-puzzles/penpa2021/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The Pencil Puzzle 2021 - Archive de casse-t&ecirc;tes logiques japonais</title>
+	<title>The Pencil Puzzle 2021 - im mender? :/</title>
 	<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
