--- a/fr/pencil-puzzles/penpa2021/index.html
+++ b/fr/pencil-puzzles/penpa2021/index.html
@@ -10,6 +10,14 @@
 
 <body>
 	<header>
+		<nav class="crumbs">
+			<div class="langnav"><a href="../../../en/pencil-puzzles/penpa2021/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+			<ol>
+				<li class="crumb"><a href="../../index.html">Accueil</a></li>
+				<li class="crumb"><a href="../index.html">Archive de casse-t&ecirc;tes logiques japonais</a></li>
+				<li class="crumb">The Pencil Puzzle 2021</li>
+			</ol>
+		</nav>
 		<p><a href="/en/pencil-puzzles/penpa2021">English</a> Fran&ccedil;ais</p>
 		<h1>The Pencil Puzzle 2021</h1>
 	</header>
