--- a/en/pencil-puzzles/dotiloop/index.html
+++ b/en/pencil-puzzles/dotiloop/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dotchi-Loop Rules - Japanese Logic Puzzle Archive</title>
+	<title>Dotchi-Loop Rules - im mender? :/</title>
 	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
