--- a/en/pencil-puzzles/fillomino/index.html
+++ b/en/pencil-puzzles/fillomino/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../../../../fr/pencil-puzzles/fillomino/index.html">Fran&ccedil;ais</a></div>
+			<div class="langnav">English &lrarr; <a href="../../../fr/pencil-puzzles/fillomino/index.html">Fran&ccedil;ais</a></div>
 			<ol>
 				<li class="crumb"><a href="../../index.html">Home</a></li>
 				<li class="crumb"><a href="../index.html">Japanese Logic Puzzle Archive</a></li>
