--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="im mender? :/" property="og:title" />
+    <meta content="Japanese Logic Puzzle Archive" property="og:description" />
+    <meta content="https://immender.github.io/en/pencil-puzzles/" property="og:url" />
 	<title>Japanese Logic Puzzle Archive - im mender? :/</title>
 	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
