--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="im mender? :/" property="og:title" />
     <meta content="Under Construction" property="og:description" />
-    <meta content="https://immender.github.io/" property="og:url" />
+    <meta content="https://immender.github.io/en/" property="og:url" />
 	<title>Home - im mender? :/</title>
 	<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
