--- a/en/index.html
+++ b/en/index.html
@@ -5,29 +5,32 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="im mender? :/" property="og:title" />
-    <meta content="Under Construction" property="og:description" />
-    <meta content="https://immender.github.io/en/" property="og:url" />
+	<meta content="Under Construction" property="og:description" />
+	<meta content="https://immender.github.io/en/" property="og:url" />
 	<title>Home - im mender? :/</title>
 	<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
-
 <body>
 	<header>
-		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
-			<ol>
-				<li class="crumb">Home</a></li>
-			</ol>
+		<nav id="crumbs">
+				<div id="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
+				<ol>
+					<li class="crumb">Home</a></li>
+				</ol>
 		</nav>
-		<h1>im mender? :/</h1>
-		<h2>Under Construction</h2>
+		<div id="titlebox">
+			<h1>im mender? :/</h1>
+		</div>
 	</header>
-	<p>This site is currently undergoing renovations.</p>
-	<h3>Resources</h3>
-	<ul>
-		<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
-		<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
-	</ul>
+	<main>
+		<h2>Under Construction</h2>
+		<p>This site is currently undergoing renovations.</p>
+		<h3>Resources</h3>
+		<ul>
+			<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
+			<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
+		</ul>
+	</main>
 </body>
 
 </html>
