--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -13,15 +13,16 @@
 
 <body>
 	<header>
-		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a></div>
+		<nav id="crumbs">
+			<div id="langnav">English &lrarr; <a href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a></div>
 			<ol>
 				<li class="crumb"><a href="../index.html">Home</a></li>
 				<li class="crumb">Japanese Logic Puzzle Archive</li>
 			</ol>
 		</nav>
-		<h1>Japanese Logic Puzzles</h1>
+		<h1 id="titlebox">Japanese Logic Puzzles</h1>
 	</header>
+	<main>
 	<p>
 		This page is an archive of logic puzzles published by the Japanese company Nikoli.
 	</p>
@@ -52,6 +53,7 @@
 		<li><a href="slither/index.html">Slitherlink</a></li>
 		<li><a href="yajilin/index.html">Yajilin</a></li>
 	</ol>
+</main>
 </body>
 
 </html>
