--- a/en/pencil-puzzles/penpa2021/index.html
+++ b/en/pencil-puzzles/penpa2021/index.html
@@ -10,16 +10,17 @@
 
 <body>
 	<header>
-		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../../../fr/pencil-puzzles/penpa2021/index.html">Fran&ccedil;ais</a></div>
+		<nav id="crumbs">
+			<div id="langnav">English &lrarr; <a href="../../../fr/pencil-puzzles/penpa2021/index.html">Fran&ccedil;ais</a></div>
 			<ol>
 				<li class="crumb"><a href="../../index.html">Home</a></li>
 				<li class="crumb"><a href="../index.html">Japanese Logic Puzzle Archive</a></li>
 				<li class="crumb">The Pencil Puzzle 2021</li>
 			</ol>
 		</nav>
-		<h1>The Pencil Puzzle 2021</h1>
+		<h1 id="titlebox">The Pencil Puzzle 2021</h1>
 	</header>
+	<main>
 	<div id="container">
 		<div id="toc">
 			<ul>
@@ -80,6 +81,7 @@
 			</p>
 		</div>
 	</div>
+</main>
 </body>
 
 </html>
