--- a/fr/index.html
+++ b/fr/index.html
@@ -10,21 +10,25 @@
 
 <body>
 	<header>
-		<nav class="crumbs">
-			<div class="langnav"><a href="../en/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+		<nav id="crumbs">
+			<div id="langnav"><a href="../en/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
 			<ol>
 				<li class="crumb">Accueil</li>
 			</ol>
 		</nav>
+		<div id="titlebox">
 		<h1>im mender? :/</h1>
-		<h2>En construction</h2>
+	</div>
 	</header>
+	<main>
+	<h2>En construction</h2>
 	<p>Ce site est en r&eacute;novation.</p>
 	<h3>Ressources</h3>
 	<ul>
 		<li><a href="goddess-metempsychosis/index.html">M&eacute;tempsychose de la d&eacute;esse</a></li>
 		<li><a href="pencil-puzzles/index.html">Casse-t&ecirc;tes logiques japonais</a></li>
 	</ul>
+</main>
 </body>
 
 </html>
