--- a/fr/pencil-puzzles/index.html
+++ b/fr/pencil-puzzles/index.html
@@ -10,14 +10,16 @@
 
 <body>
 	<header>
-		<nav class="crumbs">
-			<div class="langnav"><a href="../../en/pencil-puzzles/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+		<nav id="crumbs">
+			<div id="langnav"><a href="../../en/pencil-puzzles/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
 			<ol>
 				<li class="crumb"><a href="../index.html">Accueil</a></li>
 				<li class="crumb">Archive de casse-t&ecirc;tes logiques japonais</li>
 			</ol>
 		</nav>
+		<div id="titlebox">
 		<h1>Casse-t&ecirc;tes logiques japonais</h1>
+	</div>
 	</header>
 	<p>Ce site est une archive de casse-t&ecirc;tes logiques publi&eacute;s par la compagnie japonaise Nikoli.</p>
 	<h2>Qu'est-ce qu'un casse-t&ecirc;te logique ?</h2>
