--- a/en/index.html
+++ b/en/index.html
@@ -15,9 +15,9 @@
 	<header>
 		<nav class="crumbs">
 			<div class="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
-			<ol>
-				<li class="crumb">Home</a></li>
-			</ol>
+			<ul>
+				<li class="crumb"><a href="./">Home</a></li>
+			</ul>
 		</nav>
 		<h1>im mender? :/</h1>
 		<h2>Under Construction</h2>
