--- a/en/index.html
+++ b/en/index.html
@@ -16,7 +16,7 @@
 		<nav class="crumbs">
 			<div class="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
 			<ul>
-				<li class="crumb"><a href="./">Home</a></li>
+				<li class="crumb"><b>Home</b></li>
 			</ul>
 		</nav>
 		<h1>im mender? :/</h1>
