--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -25,8 +25,7 @@
 		<aside>
 			<nav>
 				<ol>
-					<li><a href="#jlp">Japanese Logic Puzzles</a></li>
-					<li>
+					<li><a href="#jlp">Japanese Logic Puzzles</a>
 						<ol>
 							<li><a href="#jlp-what">What is a logic puzzle?</a></li>
 							<li><a href="#note">Note</a></li>
