--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta content="im mender? :/" property="og:title" />
-		<meta content="Japanese Logic Puzzle Archive - Index" property="og:description" />
+		<meta  property="og:description" content="An archive of Japanese logic puzzles." />
 		<meta content="https://immender.github.io/en/pencil-puzzles/" property="og:url" />
 		<title>Japanese Logic Puzzle Archive - im mender? :/</title>
-		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="https://immender.github.io/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	
 	<body>
@@ -16,44 +16,41 @@
 				<a class="langnav" href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a>
 				<ul>
 					<li class="crumb"><a href="../index.html">Home</a></li>
-					<li class="crumb"><b>Japanese Logic Puzzle Archive</b></li>
+					<li class="crumb">Japanese Logic Puzzle Archive</li>
 				</ul>
 			</nav>
-			<h1>Japanese Logic Puzzles Archive</h1>
-		</header>
-		
-		<aside>
-			<nav>
+			<h1>Japanese Logic Puzzle Archive</h1>
+			<nav id="toc">
+				<h2>Table of Contents</h2>
 				<ol>
 					<li><a href="#jlp">Japanese Logic Puzzles</a>
 						<ol>
-							<li><a href="#jlp-what">What is a logic puzzle?</a></li>
+							<li><a href="#jlp-what">What is a Logic Puzzle?</a></li>
 							<li><a href="#note">Note</a></li>
 						</ol>
 					</li>
 					<li><a href="#archive">Archives</a></li>
 					<li><a href="#rules">Rules</a></li>
-				</ol>		
+				</ol>
 			</nav>
-		</aside>
-		
+		</header>
+
 		<main>
 			<article>
 				<section>
 					<h2 id="jlp">Japanese Logic Puzzles</h2>
 					<p>This page is an archive of <a href="#lp">logic puzzles</a> published by the Japanese company Nikoli.
-
 					<section>
-						<h3 id="jlp-what">What is a logic puzzle?</h3>
+						<h3 id="jlp-what">What is a Logic Puzzle?</h3>
 						<p>A <dfn id="lp">logic puzzle</dfn> is a game which can be played alone or with the help of others. The goal is to complete the puzzle while following the rules of the game. A logic puzzle can be completed either with a pencil and paper or digitally. Each type of puzzle follows a set of rules which is unique to it. The solution to a puzzle can usually be found through deduction.
 					</section>
-					
+
 					<section>
 						<h3>Note</h3>
 						<p>All puzzles on this website, unless otherwise noted, include a download for a .txt file which can be imported into one of the web apps at <a href="https://puzz.link/list.html">puzz.link</a>.
 					</section>
 				</section>
-				
+
 				<section>
 					<h2 id="archive">Archives</h2>
 					<p>The following pages contain puzzles from Nikoli's <cite>The Pencil Puzzle</cite> series.
@@ -67,7 +64,7 @@
 				<section>
 					<h2 id="rules">Rules</h2>
 					<p>The following pages contain the rules for <a href="#lp">logic puzzles</a> which have been previously published by Nikoli.
-					<ol>
+					<ul>
 						<li><a href="dbchoco/index.html">Double Choco</a></li>
 						<li><a href="dotiloop/index.html">Dotchi-Loop</a></li>
 						<li><a href="fillomino/index.html">Fillomino</a></li>
@@ -78,7 +75,7 @@
 						<li><a href="pencils/index.html">Pencils</a></li>
 						<li><a href="slither/index.html">Slitherlink</a></li>
 						<li><a href="yajilin/index.html">Yajilin</a></li>
-					</ol>
+					</ul>
 				</section>
 			</article>
 		</main>
