--- a/en/index.html
+++ b/en/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">	
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="im mender? :/">
-		<meta content="Under Construction" property="og:description">
-		<meta content="https://immender.github.io/en/" property="og:url">
-		<title>Home - im mender? :/</title>
-		<link href="../style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	
-	<body>
-		<header>
-			<nav class="crumbs">
-				<div class="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
-				<ul>
-					<li class="crumb"><b>Home</b></li>
-				</ul>
-			</nav>
-			<h1>im mender? :/</h1>
-			<h2>Under Construction</h2>
-		</header>
-		
-		<main>
-			<p>This site is currently undergoing renovations.</p>
-			<h3>Resources</h3>
-			<ul>
-				<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
-				<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
-			</ul>
-		</main>
-	</body>
-</html>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="Home">
+<meta content="This website is under construction" property="og:description">
+<meta content="https://immender.github.io/en/" property="og:url">
+<title>Home - im mender? :/</title>
+<link href="../style.css" rel="stylesheet" type="text/css" media="all">
+
+<header>
+	<nav class="crumbs">
+		<a class="langnav" href="../fr/index.html">Fran&ccedil;ais</a>
+		<ul>
+			<li class="crumb">Home</li>
+		</ul>
+	</nav>
+
+	<hgroup>
+		<h1>im mender? :/</h1>
+		<h2>Homepage</h2>
+	</hgroup>
+</header>
+
+<main>
+	<section>
+		<p>This site is currently undergoing renovations.
+		<h2>Resources</h2>
+		<ul>
+			<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
+			<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
+		</ul>
+	</section>
+</main>
