--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -6,24 +6,38 @@
 		<title>Goddess Metempsychosis - a post-apocalyptic urban fantasy game</title>
 		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
+
 	<body>
 		<header>
 			<nav class="crumbs">
-				<div class="langnav">English &lrarr; <a href="../../fr/goddess-metempsychosis/index.html">Fran&ccedil;ais</a></div>
-				<ol>
+				<a class="langnav" href="../../fr/goddess-metempsychosis/index.html">Fran&ccedil;ais</a>
+				<ul>
 					<li class="crumb"><a href="../index.html">Home</a></li>
 					<li class="crumb">Goddess Metempsychosis</li>
-				</ol>
+				</ul>
 			</nav>
-			<h1>Goddess Metempsychosis</h1>
-			<p>a post-apocalyptic urban fantasy game by Mender</p>
+			<hgroup>
+				<h1>Goddess Metempsychosis</h1>
+				<p>a post-apocalyptic urban fantasy game by Mender</p>
+			</hgroup>
 		</header>
-		<h2>Available versions</h2>
-		<ul>
-			<li>Unplayable</li>
+		
+		<main>
+			<h2>Available versions</h2>
 			<ul>
-				<li><a href="0.0.8/index.html">0.0.8</a></li>
+				<li>Playable
+					<ul>
+						<li>Watch this space</li>
+					</ul>
+				</li>
+				<li>Unplayable
+					<ul>
+						<li><a href="0.0.8/index.html">0.0.8</a></li>
+					</ul>
+				</li>
 			</ul>
-		</ul>
+		</main>
+
 	</body>
+
 </html>
