--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -19,36 +19,38 @@
 			</ol>
 		</nav>
 		<h1>Goddess Metempsychosis 0.0.8</h1>
-		<p>a post-apocalyptic urban fantasy game by Mender</p>
+		<p>a post-apocalyptic urban fantasy game by Mender
 	</header>
-	<div id="container">
-		<div id="toc">
-			<ul>
+
+	<main>
+		<nav class="toc">
+			<ol>
 				<li><a href="#foreword">Foreword</a></li>
-				<li><a href="#goddess">Goddess Metempsychosis</a></li>
-				<ul>
-					<li><a href="#cataclysm">Great Cataclysm</a></li>
-					<li><a href="#animi">Animi</a></li>
-					<li><a href="#survivors">Survivors</a></li>
-				</ul>
-			</ul>
-		</div>
-		<div id="content">
+				<li><a href="#goddess">Goddess Metempsychosis</a>
+					<ol>
+						<li><a href="#cataclysm">Great Cataclysm</a></li>
+						<li><a href="#animi">Animi</a></li>
+						<li><a href="#survivors">Survivors</a></li>
+					</ol>
+				</li>
+			</ol>
+		</nav>
+		
+		<section>
 			<h2 id="foreword">Foreword</h2>
-			<p>
-				This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
-			</p>
+			<p>This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
+		</section>
+		
+		<section>
 			<h2 id="goddess">Goddess Metempsychosis</h2>
-			<p>
-				Goddess Metempsychosis is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.
-			</p>
-			<h3 id="cataclysm">Great Cataclysm</h3>
-			<p>
-				In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
-			</p>
-		</div>
-	</div>
-	<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+			<p><dfn>Goddess Metempsychosis</dfn> is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.
+			<section>
+				<h3 id="cataclysm">Great Cataclysm</h3>
+			<p>In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
+			</section>
+		</section>
+	</main>
+	<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
 </body>
 
 </html>
