--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -11,12 +11,12 @@
 <body>
 	<header>
 		<nav class="crumbs">
-			<div class="langnav">English &lrarr; <a href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a></div>
-			<ol>
+			<a class="langnav" href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a>
+			<ul>
 				<li class="crumb"><a href="../../index.html">Home</a></li>
 				<li class="crumb"><a href="../index.html">Goddess Metempsychosis</a></li>
 				<li class="crumb">0.0.8</li>
-			</ol>
+			</ul>
 		</nav>
 		<h1>Goddess Metempsychosis 0.0.8</h1>
 		<p>a post-apocalyptic urban fantasy game by Mender
