--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -1,56 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Goddess Metempsychosis 0.0.8</title>
-	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goddess Metempsychosis 0.0.8 - im mender? :/</title>
+    <link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
+  </head>
 
-<body>
-	<header>
-		<nav class="crumbs">
-			<a class="langnav" href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a>
-			<ul>
-				<li class="crumb"><a href="../../index.html">Home</a></li>
-				<li class="crumb"><a href="../index.html">Goddess Metempsychosis</a></li>
-				<li class="crumb">0.0.8</li>
-			</ul>
-		</nav>
-		<h1>Goddess Metempsychosis 0.0.8</h1>
-		<p>a post-apocalyptic urban fantasy game by Mender
-	</header>
-
-	<main>
-		<nav class="toc">
-			<ol>
-				<li><a href="#foreword">Foreword</a></li>
-				<li><a href="#goddess">Goddess Metempsychosis</a>
-					<ol>
-						<li><a href="#cataclysm">Great Cataclysm</a></li>
-						<li><a href="#animi">Animi</a></li>
-						<li><a href="#survivors">Survivors</a></li>
-					</ol>
-				</li>
-			</ol>
-		</nav>
-		
-		<section>
-			<h2 id="foreword">Foreword</h2>
-			<p>This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
-		</section>
-		
-		<section>
-			<h2 id="goddess">Goddess Metempsychosis</h2>
-			<p><dfn>Goddess Metempsychosis</dfn> is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.
-			<section>
-				<h3 id="cataclysm">Great Cataclysm</h3>
-			<p>In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
-			</section>
-		</section>
-	</main>
-	<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
-</body>
+  <body>
+    <header>
+      <nav class="crumbs"><a class="langnav" href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a>
+        <ul>
+          <li class="crumb"><a href="../../index.html">Home</a></li>
+          <li class="crumb"><a href="../index.html">Goddess Metempsychosis</a></li>
+          <li class="crumb">0.0.8</li>
+        </ul>
+      </nav>
+      <h1>Goddess Metempsychosis 0.0.8</h1>
+      <p>a post-apocalyptic urban fantasy game by Mender</p>
+    </header>
+    <main>
+      <nav class="toc">
+        <ol>
+          <li><a href="#foreword">Foreword</a></li>
+          <li><a href="#goddess">Goddess Metempsychosis</a>
+            <ol>
+              <li><a href="#cataclysm">Great Cataclysm</a></li>
+              <li><a href="#animi">Animi</a></li>
+              <li><a href="#survivors">Survivors</a></li>
+            </ol>
+          </li>
+        </ol>
+      </nav>
+      <h2 id="foreword">Foreword</h2>
+      <p>This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.</p>
+      <h2 id="goddess">Goddess Metempsychosis</h2>
+      <p><dfn>Goddess Metempsychosis</dfn>is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.</p>
+      <h3 id="cataclysm">Great Cataclysm</h3>
+      <p>In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.</p>
+      <p>Law and chaos no longer maintain their old forms. The way things were is no more. In the aftermath, all that is left are survivors scrabbling to maintain a semblance of civilization. There are those who would take advantage of the chaos to further their own goals, and those who would restore order at any cost.</p>
+      <h3 id="animi">Animi</h3>
+    </main>
+    <footer>
+      <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
+    </footer>
+  </body>
 
 </html>
