--- a/en/index.html
+++ b/en/index.html
@@ -29,6 +29,7 @@
 		<ul>
 			<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
 			<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
+			<li><a href="statutes/index.html">Statutes of Canada</a></li>
 		</ul>
 	</section>
 </main>
