--- a/en/statutes/1867-68/c-1/consolidation.html
+++ b/en/statutes/1867-68/c-1/consolidation.html
@@ -8,16 +8,13 @@
 		<meta content="https://immender.github.io/en/statutes/1867-68/c-1/history.html" property="og:url"/>
 	</head>
 	<body>
-		<header>
-			<h1>S.C. 1867-68, c. 1</h1>
-			<h2>Consolidation</h2>
-		</header>
-		<h3>R.S.C. 1886</h3>
-		<h4>Act and parts of act repealed</h4>
+			<h1>S.C. 1867-68, c. 1&mdash;Consolidation</h1>
+		<h2>R.S.C. 1886</h2>
+		<h3>Act and parts of act repealed</h3>
 		<p>The whole.</p>
-		<h4>History and disposal of act</h4>
-		<p>Consolidated, except s. 5, which is repealed by 46 V., c. 1, s. 1; s. 7, sub-s 16, which is repealed by 46 V., c. 1, s. 2; s. 7, sub-s. 28, whiclh is repealed by 49 V., c. 3, s. 1; s. 7, sub-s. 35, which is repealed by 46 V., c. 1, s. 2; ss. 10 and 11, which are repealed by 38 V., c. 1, s. 1; and s. 15, which is repealed by 49 V., c. 2, s. 3.</p>
-		<h4>Act and parts of act consolidated</h4>
+		<h3>History and disposal of act</h3>
+		<p>Consolidated, except <a href="./section-5.html">s. 5</a>, which is repealed by <a href="../../1883/c-1/section-1.html">46 V., c. 1, s. 1</a>; <a href="./section-7.html#sub-s-16">s. 7, sub-s 16</a>, which is repealed by <a href="../../1883/c-1/section-2.html">46 V., c. 1, s. 2</a>; <a href="./section-7.html#sub-s-28">s. 7, sub-s. 28</a>, which is repealed by <a href="../../1886/c-2/section-1.html">49 V., c. 2, s. 1</a>; <a href="./section-7.html#sub-s-35">s. 7, sub-s. 35</a>, which is repealed by <a href="../../1883/c-1/section-2.html">46 V., c. 1, s. 2</a>; <a href="./section-10.html">ss. 10</a> and <a href="./section-11.html">11</a>, which are repealed by <a href="../../1874/c-1/section-1.html">38 V., c. 1, s. 1; and <a href="./section-15.html">s. 15</a>, which is repealed by <a href="../../1886/c-2/section-3.html">49 V., c. 2, s. 3</a>.</p>
+		<h3>Act and parts of act consolidated</h3>
 		<table>
 			<thead>
 				<tr>
@@ -377,17 +374,17 @@
 			</tbody>
 			<tfoot/>
 		</table>
-		<h3>R.S.C., 1906</h3>
-		<h4>Acts and parts of acts repealed</h4>
+		<h2>R.S.C., 1906</h2>
+		<h3>Acts and parts of acts repealed</h3>
 		<p><a href="../../r-s-c-1886/c-1/index.html">R.S.C., 1886, c. 1</a>: the whole.</p>
 		<p><a href="../../r-s-c-1886/c-2/index.html">R.S.C., 1886, c. 2</a>: the whole.</p>
 		<p><a href="../../r-s-c-1886/c-173/index.html">R.S.C., 1886, c. 173</a>: the whole.</p>
-		<h4>History and disposal of acts</h4>
+		<h3>History and disposal of acts</h3>
 		<p><a href="../../r-s-c-1886/c-1/index.html">R.S.C., 1886, c. 1</a>: consolidated.</p>
 		<p><a href="../../r-s-c-1886/c-2/index.html">R.S.C., 1886, c. 2</a>: consolidated, except <a href="../../r-s-c-1886/c-2/section-5.html">s. 5</a> repealed by <a href="../../1903/c-65/section-1.html">3 E. VII., c. 65, s. 1</a>; and <a href="../../r-s-c-1886/c-2/section-9.html">s. 9</a> repealed by <a href="../../1887/c-2/section-2.html">50-51 V., c. 2</a>.</p>
-		<p><a href="../../r-s-c-1886/c-173/index.html">R.S.C., 1886, c. 173</a>: <a href="../../r-s-c-1886/c-173/section-12.html#subs-5">s. 12, sub-s. 5</a> consolidated, and the remainder of the Act repealed by the <a href="../../1892/c-29/section-981.html">Criminal Code, s. 981</a> and <a href="../../1892/c-29/schedule-2.html">Schedule Two</a>.</p>
+		<p><a href="../../r-s-c-1886/c-173/index.html">R.S.C., 1886, c. 173</a>: <a href="../../r-s-c-1886/c-173/section-12.html#sub-s-5">s. 12, sub-s. 5</a> consolidated, and the remainder of the Act repealed by the <a href="../../1892/c-29/section-981.html">Criminal Code, s. 981</a> and <a href="../../1892/c-29/schedule-2.html">Schedule Two</a>.</p>
 		<p>R.S.C. 1886 c. 180: repealed by the <a href="../../1892/c-29/section-981.html">Criminal Code, s. 981</a> and <a href="../../1892/c-29/schedule-2.html">Schedule Two</a>.</p>
-		<h4>Acts and parts of acts consolidated</h4>
+		<h3>Acts and parts of acts consolidated</h3>
 		<table>
 			<thead>
 				<tr>
