add treatment, style changes

--- a/en/statutes/sc/1867-68/c-1/treatment.html
+++ b/en/statutes/sc/1867-68/c-1/treatment.html
@@ -13,13 +13,13 @@
 		<h3>Act and parts of act repealed</h3>
 		<p>The whole.</p>
 		<h3>History and disposal of act</h3>
-		<p>Consolidated, except <a href="./section-5.html">s. 5</a>, which is repealed by <a href="../../1883/c-1/section-1.html">46 V., c. 1, s. 1</a>; <a href="./section-7.html#sub-s-16">s. 7, sub-s 16</a>, which is repealed by <a href="../../1883/c-1/section-2.html">46 V., c. 1, s. 2</a>; <a href="./section-7.html#sub-s-28">s. 7, sub-s. 28</a>, which is repealed by <a href="../../1886/c-2/section-1.html">49 V., c. 2, s. 1</a>; <a href="./section-7.html#sub-s-35">s. 7, sub-s. 35</a>, which is repealed by <a href="../../1883/c-1/section-2.html">46 V., c. 1, s. 2</a>; <a href="./section-10.html">ss. 10</a> and <a href="./section-11.html">11</a>, which are repealed by <a href="../../1874/c-1/section-1.html">38 V., c. 1, s. 1; and <a href="./section-15.html">s. 15</a>, which is repealed by <a href="../../1886/c-2/section-3.html">49 V., c. 2, s. 3</a>.</p>
+		<p>Consolidated, except <a href="./s-5.html">s. 5</a>, which is repealed by <a href="../../1883/c-1/s-1.html">46 V., c. 1, s. 1</a>; <a href="./s-7.html#s-7-(16)">s. 7 (16)</a>, which is repealed by <a href="../../1883/c-1/s-2.html">46 V., c. 1, s. 2</a>; <a href="./s-7.html#s-7-(28)">s. 7 (28)</a>, which is repealed by <a href="../../1886/c-2/s-1.html">49 V., c. 2, s. 1</a>; <a href="./s-7.html#s-7-(35)">s. 7 (35)</a>, which is repealed by <a href="../../1883/c-1/s-2.html">46 V., c. 1, s. 2</a>; <a href="./s-10.html">ss. 10</a> and <a href="./s-11.html">11</a>, which are repealed by <a href="../../1874/c-1/s-1.html">38 V., c. 1, s. 1; and <a href="./s-15.html">s. 15</a>, which is repealed by <a href="../../1886/c-2/s-3.html">49 V., c. 2, s. 3</a>.</p>
 		<h3>Act and parts of act consolidated</h3>
 		<table>
 			<thead>
 				<tr>
-					<th colspan="2">S.C. 1867-68</th>
-					<th colspan="2">R.S.C. 1886</th>
+					<th colspan="2"><a href="../../">S.C. 1867-68</a></th>
+					<th colspan="2"><a href="../../../rsc/1886/">R.S.C. 1886</a></th>
 				</tr>
 				<tr>
 					<th tabindex="0">Chapter</th>
@@ -30,16 +30,16 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>1</td>
-					<td>1</td>
-					<td>1</td>
-					<td>3</td>
+					<td><a href="../">1</a></td>
+					<td><a href="../s-1.html">1</a></td>
+					<td><a href="../../../rsc/1886/c-1/">1</a></td>
+					<td><a href="../../../rsc/1886/c-1/s-3.html">3</a></td>
 				</tr>
 				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>1</td>
-					<td>4</td>
+					<td><a href="../">1</a></td>
+					<td><a href="../s-2.html">2</a></td>
+					<td><a href="../../../rsc/1886/c-1/">1</a></td>
+					<td><a href="../../../rsc/1886/c-1/s-4.html">4</a></td>
 				</tr>
 				<tr>
 					<td>1</td>
