--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -21,8 +21,8 @@
 		<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8</h1>
 		<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique par Mender</p>
 	</header>
-	<div id="container">
-		<div id="toc">
+	<main>
+		<div class="toc">
 			<ul>
 				<li><a href="#avprop">Avant-propos</a></li>
 				<li><a href="#deesse">M&eacute;tempsychose de la d&eacute;esse</a></li>
@@ -47,7 +47,10 @@
 				D'une fa&ccedil;on ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
 			</p>
 		</div>
-	</div>
+	</main>
+	<footer>
+		<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Licence Creative Commons Attribution - Pas d’Utilisation Commerciale 4.0 International</a>.</p>
+	</footer>
 </body>
 
 </html>
